Correcciones de ortografia

--- a/nosotros.html
+++ b/nosotros.html
@@ -122,7 +122,7 @@
         <div class="col-md-8">
           <h3>Desarrolladores dinamita</h3>
           <p>
-            Somos un grupo de desarrolladores Fullstack jóvenes y con ganas de emprender. Nos   encargaremos de llevar tu proyecto al siguiente nivel. Manejamos las últimas tecnologías del mercado y tenemos presencia en las principales ciudades de México ... Y recuerda que somos pura dinamita.
+            Somos un grupo de desarrolladores Fullstack jóvenes y con ganas de emprender. Nos   encargaremos de llevar tu proyecto al siguiente nivel. Manejamos las últimas tecnologías del mercado y tenemos presencia en las principales ciudades de México y recuerda, somos pura dinamita.
           </p>
         </div>
       </div>
@@ -362,7 +362,7 @@
           <img class='w-75 img-fluid mx-auto d-block' src="Assets/img/fotosEquipo/Ivan.jpeg" alt="">
           <p class="fw-bold pt-3 pb-2 text-center">Ing. Iván Alejandro López Montaño</p>
           <p class="text-justify">Soy graduado de la carrera de ingeniería biomédica, cuento con conocimientos para el
-            desarrollo web de manera fullstack, además de conocimientos de manejo de herramientas para el data science.
+            desarrollo web de manera fullstack, también cuento con conocimientos de manejo de herramientas para el data science.
           </p>
         </div>
         <div class="container ">
@@ -447,8 +447,8 @@
         <div class="modal-body">
           <img class='w-75 img-fluid mx-auto d-block' src="Assets/img/fotosEquipo/ana.jpg" alt="">
           <p class="fw-bold pt-3 pb-2 text-center">Ana Lucia Gutiérrez Coronel</p>
-          <p class="text-justify">Mi nombre es Ana Lucía Gutiérrez Coronel, soy administradora contable, y futura socióloga. Apasionada por el aprendizaje, constantemente busco aprender habilidades nuevas y retadoras que me saquen de mi zona de confort.Mi camino como programadora apenas está empezando, pero planeo que se convierta en mi camino profesional.
-            Encuentro en la tecnología una oportunidad de vida. Comprender como se estructura el mundo digital en el que vivimos me brinda curiosidad. Y despierta mis ganas de sumar y aprender mucho de esta industria.
+          <p class="text-justify">Mi nombre es Ana Lucía Gutiérrez Coronel, soy administradora contable, y futura socióloga. Apasionada por el aprendizaje, constantemente busco aprender habilidades nuevas y retadoras que me saquen de mi zona de confort. Mi camino como programadora apenas está empezando, pero planeo que se convierta en mi camino profesional.
+            Encuentro en la tecnología una oportunidad de vida. Comprender como se estructura el mundo digital en el que vivimos me brinda curiosidad, y despierta mis ganas de sumar y aprender mucho de esta industria.
             Me gustaría demostrar que las mujeres también podemos entrarle a tecnología, y aportar mucho en ello por esta razón me emociona todo lo que queda por aprender!
             </p>
         </div>
@@ -492,14 +492,14 @@
           <p class="text-justify">Soy Adriana Itchel Santacruz Martínez , tengo 20 años ,me gusta mucho hacer
             ejercicio,soy disciplinada ,me gusta leer novelas,aprender cosas nuevas.
 
-            Tome cursos de robótica cuando tenia 15 años en un lugar llamado “Punto México”, actualmente estoy tomando
+            Tomé cursos de robótica cuando tenia 15 años en un lugar llamado “Punto México”, actualmente estoy tomando
             un bootcamp de programación full-stack en HTML, CSS Y JAVASCRIPT en GENERETION.
 
             Me gusta crear cosas nuevas, trabajar en equipo , a nivel laboral no he desarrollado el liderazgo ,pero es
-            algo que me gustaría desarrollar, al igual que lograr un nivel avanzado en Ingles , me adapto fácilmente a
-            trabajar de forma presencial y ohm-office.
+            algo que me gustaría desarrollar, al igual que lograr un nivel avanzado en inglés , me adapto fácilmente a
+            trabajar de forma presencial y home-office.
 
-            Quiero un trabajo donde sea desarrolladora junior para empezar ,e ir creciendo laboralmente hasta llegar a
+            Quiero un trabajo de desarrolladora junior para empezar e ir creciendo laboralmente hasta llegar a
             ser líder de algún proyecto importante y tener la oportunidad de cumplir mis proyectos personales.
           </p>
         </div>
@@ -539,10 +539,10 @@
         </div>
         <div class="modal-body">
           <img class='w-75 img-fluid mx-auto d-block' src="Assets/img/fotosEquipo/Cynthia.jpeg" alt="">
-          <p class="fw-bold pt-3 pb-2 text-center">Ing. Cynthia Fabiola Pimentel Alvarez.
+          <p class="fw-bold pt-3 pb-2 text-center">Ing. Cynthia Fabiola Pimentel Alvarez
           </p>
-          <p class="text-justify">Habilidades técnicas: HTML, CSS y JS
-            Responsable, proactiva y siempre en busca del aprendizaje y mejora.
+          <p class="text-justify">Habilidades técnicas: HTML, CSS y JS.
+            Habilidades blandas: Responsable, proactiva y siempre en busca del aprendizaje y mejora.
           </p>
         </div>
         <div class="container ">
@@ -584,7 +584,7 @@
           <p class="fw-bold pt-3 pb-2 text-center">Gustavo Silva Granados</p>
           <p class="text-justify">¡Hola! Soy Gustavo, tengo 27 años, soy ingeniero en computación, me encanta escuchar
             música, amo el dreampop, el indie, rock alternativo, me gusta viajar y conocer nuevos lugares. Me apasiona
-            el desarrollo web, y busco ser un fullstack y espero en un futuro ser un arquitecto de software.</p>
+            el desarrollo web; busco ser un fullstack y espero en un futuro ser un arquitecto de software.</p>
         </div>
         <div class="container ">
           <div class="row">
@@ -624,7 +624,7 @@
           <img class='w-75 img-fluid mx-auto d-block' src="Assets/img/fotosEquipo/Sandra.jpeg" alt="">
           <p class="fw-bold pt-3 pb-2 text-center">Sandra Mariely Ruiz Herrera</p>
           <p class="text-justify">Soy Sandra Ruiz, tengo 26 años. Me apasiona el arte y la tecnología y busco ser un
-            desarrollador fullstack. Dentro del área de tecnología también me apasiona mucho lo que es la
+            desarrollador fullstack. Dentro del área de tecnología; me apasiona mucho lo que es la
             ciberseguridad, buscando algún día ser parte de esta área.</p>
         </div>
         <div class="container ">
@@ -666,7 +666,7 @@
         <div class="modal-body">
           <img class='w-75 img-fluid mx-auto d-block' src="Assets/img/fotosEquipo/sebastian.jpeg" alt="">
           <p class="fw-bold pt-3 pb-2 text-center">Sebastian Contreras</p>
-          <p class="text-justify">Desarrollador Java Full Stack con amor hacia el UX/UI. Geek desde la cuna y Gamer desde vidas pasadas. Si el enfoque no es hacia un bien, mejor que no sea desarrollado.</p>
+          <p class="text-justify">Desarrollador Java Full Stack con amor hacia el UX/UI. Geek desde la cuna y gamer desde vidas pasadas. Si el enfoque no es hacia un bien, mejor que no sea desarrollado.</p>
         </div>
         <div class="container ">
           <div class="row">
