--- a/index.html
+++ b/index.html
@@ -158,54 +158,30 @@
   </section>
 
   <section>
-    <div class="row justify-content-md-center">
-      <div class="col-md-3">
-        <div class="row">
-          <div data-aos="fade-right" data-aos-duration="3000">
-            <img class="imagen-casa" src="./Assets/img/casa.jpg" alt="">
-          </div>
+  <div class="container d-flex justify-content-center">
+    <div class="row centered">
+      <p class="text-center h1 py-3">¿Te interesa algo?</p>
+      <div class="col-md-6 centered">
+        <div data-aos="fade-right" data-aos-duration="3000">
+          <img class="w-100 rounded me-3" src="./Assets/img/casa.jpg" alt="Casa">
         </div>
       </div>
-      <div class="col-md-3">
-        <div>
-          <div class="">
-
-
-
-
-          </div>
-
-          <div class="col">
-
-            <div class=" margen-4ta-inicio col-md-12">
-              <div class='console-container'><span id='text'></span>
-                <div class='console-underscore' id='console'> </div>
-              </div>
+      <div class="col-md-6 centered">
+        <div class="col">
+          <div class=" margen-4ta-inicio col-md-12">
+            <div class='console-container'><span id='text'></span>
+              <div class='console-underscore' id='console'> </div>
             </div>
-            <p class="cambio"><i class="bi bi-search"></i> Busca en nuestra página</p>
-            <p class="cambio"><i class="bi bi-map"></i> Ve nuestras opciones en la ciudad que más te guste</p>
-            <p class="cambio"><i class="bi bi-hand-index"></i> Da un click en la opción que más te guste</p>
-            <p class="cambio"><i class="bi bi-house-heart"></i> Inicia una nueva vida</p>
           </div>
+          <p class="cambio"><i class="bi bi-search"></i> Busca en nuestra página</p>
+          <p class="cambio"><i class="bi bi-map"></i> Ve nuestras opciones en la ciudad que más te guste</p>
+          <p class="cambio"><i class="bi bi-hand-index"></i> Da un click en la opción que más te guste</p>
+          <p class="cambio"><i class="bi bi-house-heart"></i> Inicia una nueva vida</p>
         </div>
       </div>
     </div>
+  </div>
   </section>
-
-  <section>
-    <div class="col-md-6 flex justify-content-between">
-
-    </div>
-  </section>
-  <section>
-
-
-  </section>
-
-
-
-
-
 
   <!--Reseñas-->
   <section>
