presentacion de la paginal final

--- a/login-registro.html
+++ b/login-registro.html
@@ -127,7 +127,7 @@
           <strong class="me-auto">Inicio de sesión</strong>
           <small>Conexión exitosa...</small>
           <!-- Para que se cierre el toast con data-bs-dismiss -->
-          <button type="button" data-bs-dismiss="toast" aria-label="Cerrar notificación" class="btn-close"></button>
+          <button type="button" data-bs-dismiss="toast" aria-label="Cerrar notificación" class="btn-close" id="btnSend"></button>
         </div>
         <div class="toast-body">
           <p>Bienvenido de vuelta!</p>
