--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="card" style="width: 16rem;height: 450px;">
                   <img src="assets/img/index/queretaro.jpg" class="card-img-top" alt="..." style="height: 200px;">
                   <div class="card-body">
-                    <h5 class="card-title">Queretaro</h5>
+                    <h5 class="card-title">Querétaro</h5>
                     <p class="card-text">Ubicado muy cerca de la Ciudad de México, en la región centro-norte del país,
                       es una excelente opción para realizar actividades al aire libre, conocer lugares que marcaron la
                       historia de México y sacar tu lado más intrépido entre montañas.</p>
