Se agregaron los cambios

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </head>
 
 <body>
-   <!-- Empieza Navbar -->
-   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
+  <!-- Empieza Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
     <div class="container">
       <a href="index.html" class="navbar-brand">
         <img src="Assets/img/hogari-logo.png" alt="" width="100" class="d-inline-block align-text-top">
@@ -57,11 +57,7 @@
           <li class="nav-item text-menu">
             <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Iniciar sesión </a>
           </li>
-
-          <a href="./formulario.html" class="btn btn-primary btn-signup">Únete</a>
-
-          
-
+          <a href="Registro.html" class="btn btn-primary btn-signup">Únete</a>
         </ul>
       </div>
     </div>
@@ -76,13 +72,8 @@
             <h2 class="text-white">Una nueva vida a solo un click</h2>
             <!-- Formulario de busqueda -->
             <form class="form-inline my-2 my-lg-0">
-
-              <input class="form-control mr-sm-2" type="search" placeholder="¿Dónde deseas ir?" aria-label="Search">
+              <input class="form-control mr-sm-2" type="search" placeholder="¿Que estás buscando?" aria-label="Search">
               <button class="btn btn-success my-2 my-sm-0" type="submit">Buscar</button>
-
-
-              
-
             </form>
           </div>
         </div>
@@ -166,30 +157,54 @@
     </div>
   </section>
 
-
   <section>
-    <div class="row align-items-center">
-      <div class="col">
-
-
-        <div data-aos="fade-right"  data-aos-duration="3000">
-          <img src="/Assets/img/casa.jpg" alt="">
+    <div class="row justify-content-md-center">
+      <div class="col-md-3">
+        <div class="row">
+          <div data-aos="fade-right" data-aos-duration="3000">
+            <img class="imagen-casa" src="./Assets/img/casa.jpg" alt="">
+          </div>
         </div>
-
       </div>
+      <div class="col-md-3">
+        <div>
+          <div class="">
 
-      <div class="col">
-        <p>Cambia tu vida con estos sencillos pasos:</p>
-        <ul>
-          <li>1.-Entra en nuestra página.</li>
-          <li>2.-Busca la ciudad que mas te guste.</li>
-          <li>3.-Encuentra el lugar de tus sueños.</li>
-          <li>4.-Da un simple click y cambia tu vida.</li>
-        </ul>
+
+
+
+          </div>
+
+          <div class="col">
+
+            <div class=" margen-4ta-inicio col-md-12">
+              <div class='console-container'><span id='text'></span>
+                <div class='console-underscore' id='console'> </div>
+              </div>
+            </div>
+            <p class="cambio"><i class="bi bi-search"></i> Busca en nuestra pagina</p>
+            <p class="cambio"><i class="bi bi-map"></i> Ve nuestras opciones en la ciudad que mas te guste</p>
+            <p class="cambio"><i class="bi bi-hand-index"></i> Da un click en la opcion que mas te guste</p>
+            <p class="cambio"><i class="bi bi-house-heart"></i> Inicia una nueva vida</p>
+          </div>
+        </div>
       </div>
     </div>
+  </section>
+
+  <section>
+    <div class="col-md-6 flex justify-content-between">
+
+    </div>
+  </section>
+  <section>
+
 
   </section>
+
+
+
+
 
 
   <!--Reseñas-->
@@ -205,10 +220,12 @@
                 <div class="mb-3" style="max-width: 18rem;">
                   <div class="card-body text-secondary">
                     <h5 class="card-title">Mauricio Pérez</h5>
-                    <p class="card-text">Recomiendo Hogari. Todo claro y transparente desde el comienzo siempre informando cualquier
-                       movimiento de la propiedad. 
-                      Lo que más me gustó fue que informan quién será tu inquilino con sus antecedentes personales y de renta,
-                       cosa que no me pasaba con otras corredoras.</p>
+                    <p class="card-text">Recomiendo Hogari. Todo claro y transparente desde el comienzo siempre
+                      informando cualquier
+                      movimiento de la propiedad.
+                      Lo que más me gustó fue que informan quién será tu inquilino con sus antecedentes personales y de
+                      renta,
+                      cosa que no me pasaba con otras corredoras.</p>
                   </div>
                 </div>
 
@@ -217,9 +234,11 @@
                 <div class="mb-3" style="max-width: 18rem;">
                   <div class="card-body text-secondary">
                     <h5 class="card-title">Bárbara Cooper</h5>
-                    <p class="card-text">Quiero agradecer por el increíble servicio de Hogari. Desde el primer día que me
-                       ayudaron absolutamente en todo para rentar el departamento, incluso yo estando en el extranjero. 
-                       Las fotos y vídeos que tomaron fueron profesionales y el departamento se rentó en menos de 6 días.</p>
+                    <p class="card-text">Quiero agradecer por el increíble servicio de Hogari. Desde el primer día que
+                      me
+                      ayudaron absolutamente en todo para rentar el departamento, incluso yo estando en el extranjero.
+                      Las fotos y vídeos que tomaron fueron profesionales y el departamento se rentó en menos de 6 días.
+                    </p>
                   </div>
                 </div>
 
@@ -228,8 +247,9 @@
                 <div class=" mb-3" style="max-width: 18rem;">
                   <div class="card-body text-secondary">
                     <h5 class="card-title">Roberto Picón</h5>
-                    <p class="card-text">Hogari fue rápido, atento y 100% digital. Me rentaron dos departamentos sin salir de la casa,
-                       ¡muchas gracias!.</p>
+                    <p class="card-text">Hogari fue rápido, atento y 100% digital. Me rentaron dos departamentos sin
+                      salir de la casa,
+                      ¡muchas gracias!.</p>
                   </div>
                 </div>
 
@@ -239,8 +259,8 @@
                   <div class="card-body text-secondary">
                     <h5 class="card-title">Susi Osorio</h5>
                     <p class="card-text">Me ha encantado la experiencia en Hogari. Es todo amigable y bien explicado.
-                       Fácil de contactar y responden rápido. Estoy feliz porque en un mes ya tengo inquilino y todo ha
-                        funcionado bien.</p>
+                      Fácil de contactar y responden rápido. Estoy feliz porque en un mes ya tengo inquilino y todo ha
+                      funcionado bien.</p>
                   </div>
                 </div>
 
@@ -250,8 +270,9 @@
                   <div class="card-body ">
                     <h5 class="card-title">Carlos Cuadra</h5>
                     <p class="card-text">La experiencia con ustedes fue bastante buena, muy recomendable.
-                       El tema del contrato con la firma electrónica fue súper expedito a diferencia de otras que demoran más
-                        o tienen más pasos.</p>
+                      El tema del contrato con la firma electrónica fue súper expedito a diferencia de otras que demoran
+                      más
+                      o tienen más pasos.</p>
                   </div>
                 </div>
 
@@ -265,50 +286,61 @@
   <!-- iniciamos modal de login -->
   <!-- El modal de login nos va servir emular un inicio de sesión -->
 
-    <!-- Modal -->
-    <div class="modal fade" id="modalLogin" tabindex="-1" aria-labelledby="modalLoginLabel" aria-hidden="true">
-      <div class="modal-dialog ">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="modalLoginLabel">Bienvenido de vuelta</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <img src="Assets/img/hogari-logo.png" class="img-fluid p-2 " width="50%" alt="">
-            <form class="" id="form">
-              <h3 class="text-dark fw-bold fs-4 mb-2">Inicio de sesión</h3>
-              <div class="fw-normal text-muted mb-4">¿No tienes cuenta? <a href="Registro.html">Registrate</a></div>
-              <div class="form-floating mb-3">
-                <!-- Email -->
-                <input type="email" class="form-control" 
-                id="email" placeholder="ejemplo@email.com">
-                <label for="email" class="form-label">Ejemplo@correo.com</label>
+  <!-- Modal login -->
+  <div class="modal fade" id="modalLogin" tabindex="-1" aria-labelledby="modalLoginLabel" aria-hidden="true">
+    <div class="modal-dialog ">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modalLoginLabel">Bienvenido de vuelta</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <img src="Assets/img/hogari-logo.png" class="img-fluid p-2 " width="50%" alt="">
+          <form class="rounded bg-white p-5" id="form-login">
+            <h3 class="text-dark fw-bold fs-4 mb-2">Inicio de sesión</h3>
+            <div class="fw-normal text-muted mb-4">¿No tienes cuenta? <a href="Registro.html">Registrate</a></div>
+            <div class="form-floating mb-3">
+              <!-- Email -->
+              <input type="email" class="form-control" id="email" placeholder="ejemplo@email.com">
+              <label for="email" class="form-label">Ejemplo@correo.com</label>
+            </div>
+            <div class="form-floating mb-3">
+              <!-- password -->
+              <input type="password" class="form-control" id="password" placeholder="Contraseña">
+              <label for="password" class="form-label">Contraseña</label>
+            </div>
+            <!-- olvide contraseña link -->
+            <div class="form-floating mb-3">
+              <a href="#" class="text-muted">Olvidé mi contraseña</a>
+            </div>
+            <!-- checkbox recordar contraseña -->
+            <div class="form-floating mb-3">
+              <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="customCheck1">
+                <label class="custom-control-label" for="customCheck1">Recordar contraseña</label>
               </div>
-              <div class="form-floating mb-3">
-                <!-- password -->
-                <input type="password" class="form-control" id="password" placeholder="Contraseña">
-                <label for="password" class="form-label">Contraseña</label>
-              </div>
-              <!-- olvide contraseña link -->
-              <div class="form-floating mb-3">
-                <a href="#" class="text-muted">Olvidé mi contraseña</a>
-              </div>
-              <!-- checkbox recordar contraseña -->
-              <div class="form-floating mb-3">
-                <div class="custom-control custom-checkbox">
-                  <input type="checkbox" class="custom-control-input" id="Check1">
-                  <label class="custom-control-label" for="Check1">Recordar contraseña</label>
+              <button type="submit" class="btn btn-primary btn-signup w-100 my-4" id="btn-login">Iniciar sesión</button>
+              <p class="warnings" id="warnings"></p>
+
+              <div id="spinner">
+                <div class="sk-chase">
+                  <div class="sk-chase-dot"></div>
+                  <div class="sk-chase-dot"></div>
+                  <div class="sk-chase-dot"></div>
+                  <div class="sk-chase-dot"></div>
+                  <div class="sk-chase-dot"></div>
+                  <div class="sk-chase-dot"></div>
                 </div>
-                <button type="submit" class="btn btn-primary btn-signup my-4" id="toastBtn"
-                data-bs-dismiss="modal">Iniciar sesión</button>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-          </div>
+              </div>
+
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
         </div>
       </div>
-    </div> 
+    </div>
+  </div>
   </div> <!-- Fin del modal de login -->
 
 
@@ -358,9 +390,14 @@
   <script src='assets/js/main.js'></script>
   <script src="Assets/js/toast.js"></script>
   <script src="../lib/anime.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <!-- <script src="Assets/js/toast.js"></script> -->
+  <script src='assets/js/login-inicio/login.js'></script>
+  <script src='assets/js/index/app1.js'></script>
   <script>
     AOS.init();
   </script>
 
 </body>
+
 </html>
