--- a/ventas2.html
+++ b/ventas2.html
@@ -14,47 +14,44 @@
     
 </head>
 <body>
- <!-- Empieza Navbar -->
- <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
-  <div class="container">
-    <a href="index.html" class="navbar-brand">
-      <img src="Assets/img/hogari-logo.png" alt="" width="100" class="d-inline-block align-text-top">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="col-xs-4 navbar-nav mx-auto ms-auto py-2 text-menu">
-        <li class="nav-item">
-          <!--La clase active se debe de poner en cada página del en el navbar -->
-          <a href="/index.html" class="nav-link active" aria-current="page">
-            Inicio
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="/ventas.html" class="nav-link"> Productos </a>
-        </li>
-
-        <li class="nav-item">
-          <a href="/contacto.html" class="nav-link"> Contáctanos </a>
-        </li>
-        <li class="nav-item">
-          <a href="/nosotros.html" class="nav-link"> Acerca de nosotros </a>
-        </li>
-      </ul>
-      <ul class="navbar-nav col-xs-4 border-mq">
-
-
-        <li class="nav-item text-menu">
-          <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin">Iniciar sesión</a>
-        </li>
-
-        <a href="./formulario.html" class="btn btn-primary btn-signup">Únete</a>
-      </ul>
+   <!-- Empieza Navbar -->
+   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
+    <div class="container">
+      <a href="index.html" class="navbar-brand">
+        <img src="Assets/img/hogari-logo.png" alt="" width="100" class="d-inline-block align-text-top">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="col-xs-4 navbar-nav mx-auto ms-auto py-2 text-menu">
+          <li class="nav-item">
+            <!--La clase active se debe de poner en cada página del en el navbar -->
+            <a href="/index.html" class="nav-link active" aria-current="page">
+              Inicio
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="/ventas.html" class="nav-link"> Productos </a>
+          </li>
+          <li class="nav-item">
+            <a href="/contacto.html" class="nav-link"> Contáctanos </a>
+          </li>
+          <li class="nav-item">
+            <a href="/nosotros.html" class="nav-link"> Acerca de nosotros </a>
+          </li>
+        </ul>
+        <ul class="navbar-nav col-xs-4 border-mq">
+          <li class="nav-item text-menu">
+            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Iniciar sesión </a>
+          </li>
+          <a href="Registro.html" class="btn btn-primary btn-signup">Únete</a>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav> <!-- navbar -->
+  </nav> <!-- navbar -->
+  
 
         
 
@@ -112,7 +109,7 @@
               data-bs-dismiss="modal">Iniciar sesión</button>
           </form>
           <a href="./Registro.html" class="nav-link active" aria-current="page">
-            ¿No eres miembro? Regístrate 
+            ¿No eres miembro? Regístrate. 
           </a>
         </div>
         <div class="modal-footer">
@@ -137,7 +134,7 @@
           <button type="button" data-bs-dismiss="toast" aria-label="Cerrar notificación" class="btn-close"></button>
         </div>
         <div class="toast-body">
-          <p>Bienvenido de vuelta!</p>
+          <p>¡Bienvenido de vuelta!</p>
         </div> 
       </div> 
     </div>  
@@ -187,7 +184,7 @@
   </div>
 </div>
   <footer class="bg-light text-dark text-center pb-2 pt-4 footer-class">
-      <p>Inmobiliaria &copy; 2022 Todos los derechos Reservados</p>
+      <p>Hogari &copy; 2022 Todos los derechos Reservados</p>
   </footer> <!-- Termina footer -->
 
 
